# optical_flow

./: .gitignore  README.md
data/: events.tsv
data/Simulation_baelle/: baelle_events.tsv  timestamps_fixed.txt
data/pushbot/: pushbot_events.tsv
data/quadrat/: quadrat_DVS_Only.aedat  quadrat_Frames_Timecode.txt  quadrat_events.tsv  scene00002_mdpof.flo  scene00003_mdpof.flo  scene00004_mdpof.flo  scene00005_mdpof.flo  scene00006_mdpof.flo  scene00007_mdpof.flo  scene00008_mdpof.flo  scene00009_mdpof.flo  scene00010_mdpof.flo  scene00011_mdpof.flo  scene00012_mdpof.flo  scene00013_mdpof.flo  scene00014_mdpof.flo  scene00015_mdpof.flo  scene00016_mdpof.flo  scene00017_mdpof.flo  scene00018_mdpof.flo  scene00019_mdpof.flo  scene00020_mdpof.flo  scene00021_mdpof.flo
data/square2/: square2_events.tsv
docs/: Doxyfile  Doxyfile.in
matlab/: convert_aedat_to_tsv.m  convolution_test.m  create_filter.m  ed.m  eval_setups.m  evaluation_algorithm.m  loadaerdat.m  make_quiver_movie.m  movieQuivers.m  optical_flow.m  optical_test.m  quantize_events.m  readCxxTsv.m  readTsvOutput.m  read_events.m  show_filter.m  show_flow.m  visualize_matrix3d.m
report/: .gitignore  algorithm.tex  appendix.tex  code_design.tex  discussion.tex  ebof.bib  ebof.tex  experimental_results.tex  gpu_fo.eps  gpu_tsd.eps  implementation.tex
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  main.cpp  main_gpu.cpp  runtimeHelpers.h
src/ext/edvstools/: CMakeLists.txt
src/modules/: CompileReport.cmake
src/src/: BlockingDeque.h  BlockingQueue.h  CMakeLists.txt  CudaUtils.h  DataFlowPolicy.h  DeviceBlob.cpp  DeviceBlob.cu  DeviceBlob.h  EigenSerialization.cpp  Event.h  EventReader.cpp  EventReader.h  EventSlice.h  Filter.cpp  Filter.h  FilterFactory.cpp  FilterFactory.h  FilteringEngine.h  FilteringEngineCPU.h  FilteringEngineGPU.h  FlowSinkProcessor.h  FlowSlice.h  FourierPadder.h  FourierTransformerCUFFTW.cpp  FourierTransformerCUFFTW.h  FourierTransformerFFTW.cpp  FourierTransformerFFTW.h  GpuMath.cu  GpuMath.h  IFilterFactory.h  IFlowSinkTask.h  IFourierTransformer.cpp  IFourierTransformer.h  IQueue.h  Quantizer.cpp  Quantizer.h  TaskWriteFlowSlice.h  common.h  gpu_math.cpp  gpu_math.cu  (+4 more)
src/test/: BlockingQueueTest.cpp  CMakeLists.txt  CommonMocks.cpp  CommonMocks.h  DeviceBlobTest.cpp  EventReaderTest.cpp  FilterFactoryTest.cpp  FilterTest.cpp  FilteringEngineCPUTest.cpp  FilteringEngineGPUTest.cpp  FilteringEngineTest.cpp  FourierPadderTest.cpp  FourierTransformerCPUTest.cpp  FourierTransformerGPUTest.cpp  FourierTransformerTest.cpp  GpuMathTest.cpp  Quantizer.cpp  Quantizer.h  QuantizerTest.cpp  SequentialBufferTest.cpp  TestUtils.h
src/test/gtest/: CMakeLists.txt
